src/main/java/solutions/sulfura/projectionsdslintellijplugin/language/projections-dsl.bnf
{
  parserClass="solutions.sulfura.projectionsdslintellijplugin.psi.ProjectionsDslParser"
  parserUtilClass="solutions.sulfura.projectionsdslintellijplugin.psi.ProjectionsDslParserUtil"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="ProjectionsDsl"
  psiImplClassSuffix="Impl"
  psiPackage="solutions.sulfura.projectionsdslintellijplugin.psi"
  psiImplPackage="solutions.sulfura.projectionsdslintellijplugin.psi.impl"

  elementTypeHolderClass="solutions.sulfura.projectionsdslintellijplugin.psi.SimpleTypes"
  elementTypeClass="solutions.sulfura.projectionsdslintellijplugin.psi.ProjectionsDslElementType"
  tokenTypeClass="solutions.sulfura.projectionsdslintellijplugin.psi.ProjectionsDslTokenType"

  psiImplUtilClass="solutions.sulfura.projectionsdslintellijplugin.psi.ProjectionsDslPsiUtil"
}


projectionRoot ::= SPACE* (projection|projectionContent) (SEPARATOR|SPACE)*

projection ::= projectionTypeAlias? SPACE* projectionContentContainer SPACE* (projectionTypeAlias)?

projectionContentContainer ::= PROJECTION_CONTAINER_START_CHAR projectionContent PROJECTION_CONTAINER_END_CHAR

projectionContent ::= (SPACE* propertyDecl SPACE* SEPARATOR)* (SPACE* propertyDecl )? SPACE*

propertyDecl ::= PROPERTY_NAME SPACE* propertyAlias? SPACE* projection?
{
    methods=[getReferences]
}

propertyAlias ::= AS_KEYWORD? SPACE * PROPERTY_ALIAS_LITERAL

projectionTypeAlias ::= COLON SPACE * PROJECTION_TYPE_ALIAS_LITERAL
